--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </div>
     </header>
 
+<main class="main-content">
 <section class="contact-us">
     <div class="container__contact">
         <div class="contact__content">
@@ -1055,7 +1056,7 @@
         </div>
     </div>
 </section>
-
+</main>
 
 <footer class="footer">
     <div class="container">
