--- a/index.html
+++ b/index.html
@@ -694,9 +694,9 @@
                         <div class="card-item__title">Ask experts questions at online meeting</div>
                         <div class="card-item__list card-item__list2">
                             <ul>
-                                <li>Tell us more about your tasks.</li>
-                                <li>Fill in the brief.</li>
-                                <li>Schedule appropriate date and time of calling.</li>
+                                <li>Tell us more about your tasks</li>
+                                <li>Fill in the brief</li>
+                                <li>Schedule appropriate date and time of calling</li>
                             </ul>
                         </div>
                     </div>
@@ -707,8 +707,8 @@
                         <div class="card-item__title castom-titile">Test the product in the demo version</div>
                         <div class="card-item__list card-item__list3">
                             <ul>
-                                <li>Set product expectations.</li>
-                                <li>Make a list of questions about the product for the consultant.</li>
+                                <li>Set product expectations</li>
+                                <li>Make a list of questions about the product for the consultant</li>
                             </ul>
                         </div>
                     </div>
@@ -742,9 +742,9 @@
                                 <div class="card-item__title">Ask experts questions at online meeting</div>
                                 <div class="card-item__list">
                                     <ul>
-                                        <li>Tell us more about your tasks.</li>
-                                        <li>Fill in the brief.</li>
-                                        <li>Schedule appropriate date and time of calling.</li>
+                                        <li>Tell us more about your tasks</li>
+                                        <li>Fill in the brief</li>
+                                        <li>Schedule appropriate date and time of calling</li>
                                     </ul>
                                 </div>
                             </div>
@@ -755,8 +755,8 @@
                                 <div class="card-item__title">Test the product in the demo version</div>
                                 <div class="card-item__list card-item__list3 castom-marker">
                                     <ul>
-                                        <li>Set product expectations.</li>
-                                        <li>Make a list of questions about the product for the consultant.</li>
+                                        <li>Set product expectations</li>
+                                        <li>Make a list of questions about the product for the consultant</li>
                                     </ul>
                                 </div>
                             </div>
